crates/diffguard-analytics/tests/snapshots/snapshot_tests__snapshot_normalize_idempotent.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: normalized1 == normalized2
---
true
