crates/diffguard-analytics/tests/snapshots/snapshot_tests__snapshot_normalize_sets_schema.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: normalized.schema
---
diffguard.false_positive_baseline.v1
