crates/diffguard-analytics/tests/snapshots/snapshot_tests__snapshot_trend_run_from_receipt.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: json
---
{
  "started_at": "2026-01-01T00:00:00Z",
  "ended_at": "2026-01-01T00:00:01Z",
  "duration_ms": 1000,
  "base": "origin/main",
  "head": "HEAD",
  "scope": "added",
  "status": "fail",
  "counts": {
    "info": 0,
    "warn": 0,
    "error": 1
  },
  "files_scanned": 1,
  "lines_scanned": 10,
  "findings": 1
}
