crates/diffguard-analytics/tests/snapshots/snapshot_tests__summarize_empty.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: summary
---
{
  "run_count": 0,
  "totals": {
    "info": 0,
    "warn": 0,
    "error": 0
  },
  "total_findings": 0
}
