crates/diffguard-analytics/tests/snapshots/snapshot_tests__trend_run_one.snap
---
source: crates/diffguard-analytics/tests/snapshot_tests.rs
expression: run
---
{
  "started_at": "2026-01-15T10:00:00Z",
  "ended_at": "2026-01-15T10:00:05Z",
  "duration_ms": 5000,
  "base": "origin/main",
  "head": "abc123",
  "scope": "added",
  "status": "fail",
  "counts": {
    "info": 0,
    "warn": 1,
    "error": 1,
    "suppressed": 5
  },
  "files_scanned": 12,
  "lines_scanned": 500,
  "findings": 1
}
